# Orin.LAB

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  orin.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  signal_feedback.md
.github/workflows/: ci.yml  codeql.yml  lint.yml  release.yml  test.yml
agents/: alert_manager.py  dashboard.py  market_analyst.py  onchain_agent.py  post_writer.py  signal_engine.py  signal_engine_v2.py  signal_history.py  whale_tracker.py
bot/: handlers.py  telegram_bot.py
cli/: go.mod  main.go
core/: Cargo.toml
core/src/: lib.rs
docs/: index.html
poster/: package.json
poster/src/: index.ts
sdk/: package.json
sdk/src/: index.ts
tests/: test_cache.py  test_config.py  test_helpers.py  test_onchain_agent.py  test_rate_limiter.py  test_signal_engine.py
utils/: __init__.py  ai_client.py  cache.py  config.py  helpers.py  logger.py  rate_limiter.py
