[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orinlab"
version = "1.0.0"
description = "AI Research Lab for Crypto Markets — Telegram bot, signals, on-chain analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "crypto", "trading", "solana", "telegram", "signals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "tweepy>=4.14.0",
]

[project.urls]
Homepage = "https://github.com/nujar00t/orinlab"
Repository = "https://github.com/nujar00t/orinlab"
Issues = "https://github.com/nujar00t/orinlab/issues"

[project.scripts]
orin = "orin:cli"

[tool.setuptools.packages.find]
include = ["bot*", "agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
